welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:4: error: ')' expected but 'return' found.
  	if(nums(i) == nums(i+1) && nums(i+1)== nums(i+2) return true;
                                                         ^